// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders popup modal body for concern suggestion 1`] = `
<select
  className="select large"
  name="concernType"
  onChange={[Function]}
  value="active"
>
  <option
    className="option disabled"
    disabled={true}
    value=""
  >
    Select a concern type
  </option>
  <option
    className="option"
    value="active"
  >
    Active concern
  </option>
  <option
    className="option"
    value="inactive"
  >
    Inactive concern
  </option>
</select>
`;

exports[`renders popup modal body for goal suggestion 1`] = `
<div>
  <select
    className="select large"
    name="concernId"
    onChange={[Function]}
    value="concern-id"
  >
    <option
      className="option disabled"
      disabled={true}
      value=""
    >
      Select a concern
    </option>
    <optgroup
      label="Suggested concerns"
    >
      <option
        value="concern-id"
      >
        Concern Title
      </option>
    </optgroup>
  </select>
  <div
    className="acceptModalInput"
  >
    <select
      className="select large"
      name="concernType"
      onChange={[Function]}
      value="active"
    >
      <option
        className="option disabled"
        disabled={true}
        value=""
      >
        Select a concern type
      </option>
      <option
        className="option"
        value="active"
      >
        Active concern
      </option>
      <option
        className="option"
        value="inactive"
      >
        Inactive concern
      </option>
    </select>
  </div>
</div>
`;
